Melhorias, agora funcionando botão start e stop.

--- a/popup.html
+++ b/popup.html
@@ -12,13 +12,17 @@
         font-size: 15px;
         text-align: center;
     }
+    button{
+        margin: 10px;
+    }
     </style>
     <body>
             <div>
                 <center>
                 <h2> BITMEX WILL </h2>
 
-                <button id="btn">Start</button>
+                <button id="start">Start</button>
+                <button id="stop">Stop</button>
                 </center>
             </div>          
     </body>
